# power-fair-value

./: .env.example  README.md  config.yaml  final.md  main.py  pyproject.toml  remediation_config_example.yaml
DA-to-curve/: DA-to-curve.py
artifacts/20260212_215332/: run_log.jsonl
artifacts/auto_pipeline_20260212_215542/: pipeline_report.md
artifacts/auto_pipeline_iter_1/: qa_results.json
blocks/: blocks.py
context/: data_profile.json  model_metrics_by_hour.csv  model_predictions.csv  qa_remediation_results.json  training_summary.json
data/processed/: daily_blocks.csv  smard_clean.parquet  smard_unified.parquet
data/raw/smard/consumption/: de_consumption_2018_2023.csv  de_consumption_2024_2026.csv
ingestion/: ingest_smard_pandas.py
outputs/: interpretation_report.md  metrics.csv  model_comparison.csv  model_metrics.csv  pipeline_meta.joblib  qa_report.md
outputs/da_to_curve/: backtest_summary.json  daily_signals.csv  invalidation.json  monthly_curve.csv  trading_guidance.md
src/interpretation_agent/: agent.py  cli.py  config.py  tools.py
src/qa_pipeline/: checks.py  cleaning.py  cli.py  config.py  io.py  pipeline.py  plots.py  profiling.py  report.py
src/remediation_pipeline/: cli.py  config.py  issue_parser.py  pipeline.py  strategies.py
src/remediation_pipeline/domain/: __init__.py  electricity.py  patterns.py
src/remediation_pipeline/tools/: __init__.py  missing_data.py  time_series.py  validation.py
tests/: test_checks.py  test_cleaning.py  test_config.py  test_remediation.py
training/: train.py
(+2 files in other folders)
